--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -3190,7 +3190,7 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQO-IB-ahn">
-                                                <rect key="frame" x="253" y="256" width="129" height="38"/>
+                                                <rect key="frame" x="253" y="320" width="129" height="38"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="129" id="23w-OJ-E2p"/>
@@ -3200,6 +3200,21 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                             </button>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Баланс (необязат. поле)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jq9-nJ-FQw">
+                                                <rect key="frame" x="8" y="272" width="374" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="xLg-7e-9Tz"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="URL"/>
+                                            </textField>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rx-Vn-vAt">
+                                                <rect key="frame" x="8" y="302" width="374" height="2"/>
+                                                <color key="backgroundColor" name="gray"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="0wS-qa-OkN"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
@@ -3207,10 +3222,13 @@
                                             <constraint firstItem="AFH-5G-34A" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="0zt-Et-3IT"/>
                                             <constraint firstItem="vtC-og-2hh" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="9QF-On-wpt"/>
                                             <constraint firstItem="Egw-rM-l6X" firstAttribute="top" secondItem="4e6-by-dLS" secondAttribute="top" constant="16" id="9hz-MW-A5p"/>
+                                            <constraint firstItem="jq9-nJ-FQw" firstAttribute="top" secondItem="nq2-EG-8ef" secondAttribute="bottom" constant="32" id="CX4-Zu-iqT"/>
                                             <constraint firstItem="ikh-Bf-aeE" firstAttribute="top" secondItem="UaF-pc-PaN" secondAttribute="bottom" id="DnC-wZ-1cJ"/>
                                             <constraint firstItem="UaF-pc-PaN" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="G6x-2Q-E7R"/>
                                             <constraint firstItem="bR7-Ln-TLw" firstAttribute="top" secondItem="oSk-3E-Rwi" secondAttribute="bottom" constant="32" id="JMq-zT-Y1e"/>
+                                            <constraint firstItem="5rx-Vn-vAt" firstAttribute="top" secondItem="jq9-nJ-FQw" secondAttribute="bottom" id="KY9-na-93j"/>
                                             <constraint firstItem="ikh-Bf-aeE" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="MlH-zc-lat"/>
+                                            <constraint firstItem="5rx-Vn-vAt" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="P7i-et-zpX"/>
                                             <constraint firstItem="vtC-og-2hh" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="PIj-Lr-Dsn"/>
                                             <constraint firstItem="nq2-EG-8ef" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="SdE-sP-Acy"/>
                                             <constraint firstItem="oSk-3E-Rwi" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="Tcl-dn-StU"/>
@@ -3218,17 +3236,20 @@
                                             <constraint firstItem="AFH-5G-34A" firstAttribute="top" secondItem="ikh-Bf-aeE" secondAttribute="bottom" constant="32" id="Vsr-Lt-t7Z"/>
                                             <constraint firstItem="AFH-5G-34A" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="XEb-Rx-b8V"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="qQO-IB-ahn" secondAttribute="trailing" id="XZU-fO-RNp"/>
-                                            <constraint firstItem="qQO-IB-ahn" firstAttribute="top" secondItem="nq2-EG-8ef" secondAttribute="bottom" constant="16" id="Y8q-Nt-cBb"/>
                                             <constraint firstItem="bR7-Ln-TLw" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="Z5S-fe-LDf"/>
                                             <constraint firstItem="UaF-pc-PaN" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="bjK-ih-wbE"/>
+                                            <constraint firstItem="qQO-IB-ahn" firstAttribute="top" secondItem="5rx-Vn-vAt" secondAttribute="bottom" constant="16" id="cEI-hj-cAv"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="Egw-rM-l6X" secondAttribute="trailing" id="hx9-zw-MUZ"/>
+                                            <constraint firstItem="5rx-Vn-vAt" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="iV3-YE-EWD"/>
                                             <constraint firstItem="Egw-rM-l6X" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="joD-Jf-lcC"/>
+                                            <constraint firstItem="jq9-nJ-FQw" firstAttribute="trailing" secondItem="4e6-by-dLS" secondAttribute="trailingMargin" id="ph7-ne-fxF"/>
                                             <constraint firstItem="UaF-pc-PaN" firstAttribute="top" secondItem="vtC-og-2hh" secondAttribute="bottom" constant="32" id="t9k-hv-G5h"/>
                                             <constraint firstItem="bR7-Ln-TLw" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="uMk-n9-AqT"/>
                                             <constraint firstItem="nq2-EG-8ef" firstAttribute="top" secondItem="AFH-5G-34A" secondAttribute="bottom" id="uVf-QG-UEf"/>
                                             <constraint firstItem="ikh-Bf-aeE" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="ujn-aB-vfN"/>
                                             <constraint firstItem="vtC-og-2hh" firstAttribute="top" secondItem="bR7-Ln-TLw" secondAttribute="bottom" id="umG-EM-SYk"/>
                                             <constraint firstItem="oSk-3E-Rwi" firstAttribute="top" secondItem="Egw-rM-l6X" secondAttribute="bottom" id="xdv-Vh-f34"/>
+                                            <constraint firstItem="jq9-nJ-FQw" firstAttribute="leading" secondItem="4e6-by-dLS" secondAttribute="leadingMargin" id="xua-d0-47a"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -3252,6 +3273,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="balanceTextField" destination="jq9-nJ-FQw" id="24K-JT-e2n"/>
                         <outlet property="doneButton" destination="qQO-IB-ahn" id="r5n-W5-QNQ"/>
                         <outlet property="nameTextField" destination="Egw-rM-l6X" id="GCQ-Yz-PVe"/>
                         <outlet property="okTextField" destination="AFH-5G-34A" id="mqw-Cr-Ldj"/>
