--- a/SadAgregator/View/cells/BrokerCell/BrokerTableViewCell.xib
+++ b/SadAgregator/View/cells/BrokerCell/BrokerTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19115.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19107.4"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -65,7 +66,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NWJ-We-hil">
-                        <rect key="frame" x="16" y="82" width="288" height="67"/>
+                        <rect key="frame" x="16" y="86" width="288" height="63"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </tableView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d3Z-5R-sJ7" userLabel="separatorView">
@@ -83,16 +84,79 @@
                         </constraints>
                         <imageReference key="image" image="checkmark.seal.fill" catalog="system"/>
                     </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sGx-L9-TC2">
+                        <rect key="frame" x="238.5" y="11" width="65.5" height="70"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="d40-a0-yvp">
+                                <rect key="frame" x="0.0" y="0.0" width="65.5" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yH3-xd-vdw">
+                                        <rect key="frame" x="0.0" y="-0.5" width="18" height="18"/>
+                                        <color key="tintColor" red="0.79936379189999995" green="0.79947966339999998" blue="0.79933840040000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="Gbb-nU-YdB"/>
+                                            <constraint firstAttribute="width" constant="18" id="YhX-1d-xHN"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="aBi-ih-DfU">
+                                        <rect key="frame" x="30" y="0.0" width="35.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="u0d-cJ-fZc">
+                                <rect key="frame" x="0.0" y="26" width="65.5" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="6" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill.checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mwD-za-13W">
+                                        <rect key="frame" x="0.0" y="1.5" width="22" height="15"/>
+                                        <color key="tintColor" red="0.79936379189999995" green="0.79947966339999998" blue="0.79933840040000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="NEQ-4m-Sqa"/>
+                                            <constraint firstAttribute="width" constant="22" id="Wjm-nx-PyZ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" tag="7" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="PBZ-8w-9i9">
+                                        <rect key="frame" x="30" y="0.0" width="35.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oic-b4-Xme">
+                                <rect key="frame" x="0.0" y="52" width="65.5" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="8" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3u0-1L-O65">
+                                        <rect key="frame" x="0.0" y="1" width="22" height="15.5"/>
+                                        <color key="tintColor" red="0.79936379189999995" green="0.79947966339999998" blue="0.79933840040000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="Tsa-0b-PfR"/>
+                                            <constraint firstAttribute="width" constant="22" id="ZDX-gX-9Zo"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" tag="9" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="4li-rN-Xv6">
+                                        <rect key="frame" x="30" y="0.0" width="35.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <color key="backgroundColor" name="whiteblack"/>
                 <constraints>
                     <constraint firstItem="NWJ-We-hil" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="0el-U9-Q2S"/>
                     <constraint firstItem="n85-NZ-5P1" firstAttribute="leading" secondItem="Zh6-Fw-pfs" secondAttribute="trailing" constant="4" id="2FZ-3f-nGu"/>
-                    <constraint firstItem="NWJ-We-hil" firstAttribute="top" secondItem="kfR-aK-sP2" secondAttribute="bottom" constant="8" id="7NR-Ak-34q"/>
+                    <constraint firstItem="NWJ-We-hil" firstAttribute="top" secondItem="kfR-aK-sP2" secondAttribute="bottom" constant="12" id="7NR-Ak-34q"/>
                     <constraint firstItem="kfR-aK-sP2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="88O-qw-S06"/>
                     <constraint firstItem="ZLc-IB-9qY" firstAttribute="leading" secondItem="vs4-yv-RDv" secondAttribute="trailing" constant="4" id="A2k-PQ-h8a"/>
                     <constraint firstItem="d3Z-5R-sJ7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="E0d-bo-cH1"/>
                     <constraint firstItem="ZLc-IB-9qY" firstAttribute="top" secondItem="Zh6-Fw-pfs" secondAttribute="bottom" constant="6" id="GqG-Pr-NLy"/>
+                    <constraint firstItem="sGx-L9-TC2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="O4l-jb-4Y2"/>
                     <constraint firstItem="Zh6-Fw-pfs" firstAttribute="top" secondItem="kfR-aK-sP2" secondAttribute="top" constant="8" id="VN6-1a-fWI"/>
                     <constraint firstAttribute="trailing" secondItem="d3Z-5R-sJ7" secondAttribute="trailing" id="YKV-b5-RqE"/>
                     <constraint firstAttribute="bottom" secondItem="NWJ-We-hil" secondAttribute="bottom" constant="8" id="m4W-Lf-nxu"/>
@@ -101,6 +165,7 @@
                     <constraint firstItem="Zh6-Fw-pfs" firstAttribute="leading" secondItem="kfR-aK-sP2" secondAttribute="trailing" constant="8" id="puI-OQ-gUU"/>
                     <constraint firstItem="vs4-yv-RDv" firstAttribute="leading" secondItem="kfR-aK-sP2" secondAttribute="trailing" constant="8" id="qET-3v-SbV"/>
                     <constraint firstItem="n85-NZ-5P1" firstAttribute="centerY" secondItem="Zh6-Fw-pfs" secondAttribute="centerY" id="qqp-Bh-T1U"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="sGx-L9-TC2" secondAttribute="trailing" id="s2C-0c-eQW"/>
                     <constraint firstItem="NWJ-We-hil" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="tdz-Hn-XkD"/>
                     <constraint firstAttribute="bottom" secondItem="d3Z-5R-sJ7" secondAttribute="bottom" id="trX-fY-6kD"/>
                 </constraints>
@@ -108,9 +173,15 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="brokerImageView" destination="kfR-aK-sP2" id="Vr0-KH-0DH"/>
+                <outlet property="imageCountImageView" destination="3u0-1L-O65" id="Shx-eD-WxH"/>
+                <outlet property="imageCountLabel" destination="4li-rN-Xv6" id="S85-gb-gSV"/>
                 <outlet property="label" destination="Zh6-Fw-pfs" id="Veo-fj-dSf"/>
+                <outlet property="peoplesImageView" destination="mwD-za-13W" id="QZW-4Z-WGN"/>
+                <outlet property="peoplesLabel" destination="PBZ-8w-9i9" id="4AA-h5-Rk3"/>
                 <outlet property="ratingLabel" destination="vs4-yv-RDv" id="mWu-2m-hZc"/>
                 <outlet property="ratingView" destination="ZLc-IB-9qY" id="RuZ-Ry-03Z"/>
+                <outlet property="revImageView" destination="yH3-xd-vdw" id="czX-23-Vm5"/>
+                <outlet property="revLabel" destination="aBi-ih-DfU" id="Hly-Ra-Pjc"/>
                 <outlet property="tableView" destination="NWJ-We-hil" id="DEc-fL-Icq"/>
                 <outlet property="verifyImageView" destination="n85-NZ-5P1" id="fz2-z0-bt2"/>
             </connections>
@@ -124,6 +195,9 @@
     </designables>
     <resources>
         <image name="checkmark.seal.fill" catalog="system" width="128" height="128"/>
+        <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
+        <image name="photo.fill" catalog="system" width="128" height="93"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
         <namedColor name="gray">
             <color red="0.96100002527236938" green="0.9649999737739563" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
